chore(gitignore): stop tracking archived notebooks and results

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Virtual environment
-.venv_temp/
+.venv_temp
+
+#archived
+notebooks/archive
+results/archive
 
 # Ignore system files
 *.DS_Store
